--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -9,10 +9,10 @@
                 <section class="tags">
                     <p class="tags__titulo">Busque por tags:</p>
                     <ul class="tags__lista">
-                        <li class="tags__tag">Nebulosa</li>
-                        <li class="tags__tag">Estrela</li>
-                        <li class="tags__tag">Galáxia</li>
-                        <li class="tags__tag">Planeta</li>
+                        <li class="tags__tag"><a class="tag__link" href="/tags/Nebulosa">Nebulosa</a></li>
+                        <li class="tags__tag"><a class="tag__link" href="/tags/Estrela">Estrela</a></li>
+                        <li class="tags__tag"><a class="tag__link" href="/tags/Galáxia">Galáxia</a></li>
+                        <li class="tags__tag"><a class="tag__link" href="/tags/Planeta">Planeta</a></li>
                     </ul>
                 </section>
                 <section class="galeria">
@@ -30,7 +30,15 @@
                                     <img class="card__imagem" src="{{fotografia.foto.url}}" alt="foto">
                                 {% endif %}
                                 </a>
-                                <span class="card__tag">Estrelas</span>
+                                {% if fotografia.categoria == "NEBULOSA"%}
+                                    <span class="card__tag"> Nebulosa</span>
+                                {% elif fotografia.categoria == "ESTRELA"%}
+                                    <span class="card__tag"> Estrela</span>
+                                {% elif fotografia.categoria == "GALÁXIA"%}
+                                <span class="card__tag"> Galáxia </span>
+                                {% elif fotografia.categoria == "PLANETA"%}
+                                    <span class="card__tag"> Planeta</span>
+                                {% endif %}
                                 <div class="card__info">
                                     <p class="card__titulo">{{ fotografia.nome }}</p>
                                     <div class="card__texto">
