--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -9,10 +9,10 @@
                 <section class="tags">
                     <p class="tags__titulo">Busque por tags:</p>
                     <ul class="tags__lista">
-                        <li class="tags__tag"><a class="tag__link" href="/tags/Nebulosa">Nebulosa</a></li>
-                        <li class="tags__tag"><a class="tag__link" href="/tags/Estrela">Estrela</a></li>
-                        <li class="tags__tag"><a class="tag__link" href="/tags/Galáxia">Galáxia</a></li>
-                        <li class="tags__tag"><a class="tag__link" href="/tags/Planeta">Planeta</a></li>
+                        <li class="tags__tag"><a class="tag__link" href="/tag/Nebulosa">Nebulosa</a></li>
+                        <li class="tags__tag"><a class="tag__link" href="/tag/Estrela">Estrela</a></li>
+                        <li class="tags__tag"><a class="tag__link" href="/tag/Galáxia">Galáxia</a></li>
+                        <li class="tags__tag"><a class="tag__link" href="/tag/Planeta">Planeta</a></li>
                     </ul>
                 </section>
                 <section class="galeria">
