--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -9,10 +9,10 @@
                 <section class="tags">
                     <p class="tags__titulo">Busque por tags:</p>
                     <ul class="tags__lista">
-                        <li class="tags__tag"><a class="tag__link" href="/tag/Nebulosa">Nebulosa</a></li>
-                        <li class="tags__tag"><a class="tag__link" href="/tag/Estrela">Estrela</a></li>
-                        <li class="tags__tag"><a class="tag__link" href="/tag/Galáxia">Galáxia</a></li>
-                        <li class="tags__tag"><a class="tag__link" href="/tag/Planeta">Planeta</a></li>
+                        <li class="tags__tag"><a class="tag__link" href="{% url 'tag' 'Nebulosa'%}" class="btn" style="color: #C9C9C9;">Nebulosa</a></li>
+                        <li class="tags__tag"><a class="tag__link" href="{% url 'tag' 'Estrela'%}" class="btn" style="color: #C9C9C9;">Estrela</a></li>
+                        <li class="tags__tag"><a class="tag__link" href="{% url 'tag' 'Galáxia'%}" class="btn" style="color: #C9C9C9;">Galáxia</a></li>
+                        <li class="tags__tag"><a class="tag__link" href="{% url 'tag' 'Planeta'%}" class="btn" style="color: #C9C9C9;">Planeta</a></li>
                     </ul>
                 </section>
                 <section class="galeria">
